--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "serverless-s3-sync": "^3.1.0"
+    "serverless-s3-sync": "^3.1.0",
+    "webpack": "^5.75.0"
+  },
+  "devDependencies": {
+    "serverless-webpack": "^5.11.0"
   }
 }
