--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "serverless-s3-sync": "^3.1.0",
+    "uuid": "^9.0.0",
     "webpack": "^5.75.0"
   },
   "devDependencies": {
+    "serverless-jetpack": "^0.11.1",
+    "serverless-step-functions": "^3.11.1",
     "serverless-webpack": "^5.11.0"
   }
 }
